try to use contain

--- a/index.html
+++ b/index.html
@@ -4,103 +4,199 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="main.css" />
   </head>
 
   <body>
-    <section>
+    <header class="card">
+      <h2>
+        Exploring Transformation: Artificial Intelligence and Climate Change
+      </h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam unde odio
-        autem nostrum est, harum voluptas, molestias exercitationem repellendus
-        quaerat, ea reiciendis corrupti inventore quibusdam! Hic aut nesciunt
-        libero ipsam. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Delve into two distinct yet interconnected realms of human innovation
+        and global concern. First, journey through the evolution of Artificial
+        Intelligence (AI) as it progresses from its mid-20th-century inception
+        to the transformative technology it is today. Discover how AI has
+        revolutionized industries, healthcare, and decision-making, while also
+        posing challenges like job displacement and bias.
       </p>
-    </section>
+    </header>
     <main>
-      <div class="l-documents">
-        <button>Click on me !</button>
-        <div class="documents">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam unde
-          odio autem nostrum est, harum voluptas, molestias exercitationem
-          repellendus quaerat, ea reiciendis corrupti inventore quibusdam! Hic
-          aut nesciunt libero ipsam. Lorem ipsum dolor sit amet consectetur,
-          adipisicing elit. Accusantium rerum optio quo blanditiis aspernatur
-          dolor cum rem provident aut, sit, voluptas debitis id ipsam
-          perspiciatis omnis libero molestiae vero praesentium. Lorem ipsum
-          dolor sit amet consectetur adipisicing elit. Totam unde odio autem
-          nostrum est, harum voluptas, molestias exercitationem repellendus
-          quaerat, ea reiciendis corrupti inventore quibusdam! Hic aut nesciunt
-          libero ipsam. Lorem ipsum dolor sit amet consectetur, adipisicing
-          elit. Accusantium rerum optio quo blanditiis aspernatur dolor cum rem
-          provident aut, sit, voluptas debitis id ipsam perspiciatis omnis
-          libero molestiae vero praesentium. Lorem ipsum dolor sit amet
-          consectetur adipisicing elit. Totam unde odio autem nostrum est, harum
-          voluptas, molestias exercitationem repellendus quaerat, ea reiciendis
-          corrupti inventore quibusdam! Hic aut nesciunt libero ipsam. Lorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Accusantium rerum
-          optio quo blanditiis aspernatur dolor cum rem provident aut, sit,
-          voluptas debitis id ipsam perspiciatis omnis libero molestiae vero
-          praesentium. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Totam unde odio autem nostrum est, harum voluptas, molestias
-          exercitationem repellendus quaerat, ea reiciendis corrupti inventore
-          quibusdam! Hic aut nesciunt libero ipsam. Lorem ipsum dolor sit amet
-          consectetur, adipisicing elit. Accusantium rerum optio quo blanditiis
-          aspernatur dolor cum rem provident aut, sit, voluptas debitis id ipsam
-          perspiciatis omnis libero molestiae vero praesentium. Lorem ipsum
-          dolor sit amet consectetur adipisicing elit. Totam unde odio autem
-          nostrum est, harum voluptas, molestias exercitationem repellendus
-          quaerat, ea reiciendis corrupti inventore quibusdam! Hic aut nesciunt
-          libero ipsam. Lorem ipsum dolor sit amet consectetur, adipisicing
-          elit. Accusantium rerum optio quo blanditiis aspernatur dolor cum rem
-          provident aut, sit, voluptas debitis id ipsam perspiciatis omnis
-          libero molestiae vero praesentium. Lorem ipsum dolor sit amet
-          consectetur adipisicing elit. Totam unde odio autem nostrum est, harum
-          voluptas, molestias exercitationem repellendus quaerat, ea reiciendis
-          corrupti inventore quibusdam! Hic aut nesciunt libero ipsam. Lorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Accusantium rerum
-          optio quo blanditiis aspernatur dolor cum rem provident aut, sit,
-          voluptas debitis id ipsam perspiciatis omnis libero molestiae vero
-          praesentium. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Totam unde odio autem nostrum est, harum voluptas, molestias
-          exercitationem repellendus quaerat, ea reiciendis corrupti inventore
-          quibusdam! Hic aut nesciunt libero ipsam. Lorem ipsum dolor sit amet
-          consectetur, adipisicing elit. Accusantium rerum optio quo blanditiis
-          aspernatur dolor cum rem provident aut, sit, voluptas debitis id ipsam
-          perspiciatis omnis libero molestiae vero praesentium. Lorem ipsum
-          dolor sit amet consectetur adipisicing elit. Totam unde odio autem
-          nostrum est, harum voluptas, molestias exercitationem repellendus
-          quaerat, ea reiciendis corrupti inventore quibusdam! Hic aut nesciunt
-          libero ipsam. Lorem ipsum dolor sit amet consectetur, adipisicing
-          elit. Accusantium rerum optio quo blanditiis aspernatur dolor cum rem
-          provident aut, sit, voluptas debitis id ipsam perspiciatis omnis
-          libero molestiae vero praesentium. Lorem ipsum dolor sit amet
-          consectetur adipisicing elit. Totam unde odio autem nostrum est, harum
-          voluptas, molestias exercitationem repellendus quaerat, ea reiciendis
-          corrupti inventore quibusdam! Hic aut nesciunt libero ipsam. Lorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Accusantium rerum
-          optio quo blanditiis aspernatur dolor cum rem provident aut, sit,
-          voluptas debitis id ipsam perspiciatis omnis libero molestiae vero
-          praesentium. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Totam unde odio autem nostrum est, harum voluptas, molestias
-          exercitationem repellendus quaerat, ea reiciendis corrupti inventore
-          quibusdam! Hic aut nesciunt libero ipsam. Lorem ipsum dolor sit amet
-          consectetur, adipisicing elit. Accusantium rerum optio quo blanditiis
-          aspernatur dolor cum rem provident aut, sit, voluptas debitis id ipsam
-          perspiciatis omnis libero molestiae vero praesentium.
+      <div class="l-include-gutter">
+        <div class="l-article">
+          <button>Click on me !</button>
+          <article class="card">
+            <h3>Climate change</h3>
+            <p>
+              Climate change is one of the most pressing issues facing humanity
+              today. It refers to long-term changes in global temperature and
+              weather patterns, primarily driven by human activities such as the
+              burning of fossil fuels, deforestation, and industrial processes.
+            </p>
+
+            <p>
+              The consequences of climate change are far-reaching and include
+              rising global temperatures, melting ice caps, more frequent and
+              severe weather events, sea-level rise, and disruptions to
+              ecosystems. These changes have significant impacts on both the
+              environment and society.
+            </p>
+
+            <p>
+              One of the most concerning aspects of climate change is its effect
+              on vulnerable communities and future generations. Rising sea
+              levels threaten coastal communities, extreme heatwaves can be
+              deadly, and changing precipitation patterns can lead to droughts
+              and food shortages.
+            </p>
+
+            <p>
+              Efforts to combat climate change include reducing greenhouse gas
+              emissions, transitioning to renewable energy sources, conserving
+              forests, and adopting sustainable practices. Governments,
+              businesses, and individuals all play a crucial role in addressing
+              this global challenge.
+            </p>
+          </article>
         </div>
       </div>
-      <div class="l-documents">
-        <button>Click on me !</button>
-        <div class="documents">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam unde
-          odio autem nostrum est, harum voluptas, molestias exercitationem
-          repellendus quaerat, ea reiciendis corrupti inventore quibusdam! Hic
-          aut nesciunt libero ipsam. Lorem ipsum dolor sit amet consectetur,
-          adipisicing elit. Accusantium rerum optio quo blanditiis aspernatur
-          dolor cum rem provident aut, sit, voluptas debitis id ipsam
-          perspiciatis omnis libero molestiae vero praesentium.
+      <div class="l-include-gutter">
+        <div class="l-article">
+          <button>Click on me !</button>
+          <article class="card">
+            <h3>The Evolution of Artificial Intelligence</h3>
+            <p>
+              Artificial Intelligence (AI) has come a long way since its
+              inception in the mid-20th century. The term "artificial
+              intelligence" was first coined by John McCarthy in 1956 during a
+              Dartmouth College workshop. Early AI research focused on symbolic
+              reasoning and rule-based systems, but progress was slow due to
+              limited computing power.
+            </p>
+
+            <p>
+              In the 21st century, AI entered a new era, thanks to advancements
+              in machine learning and neural networks. Deep learning, a subset
+              of machine learning, made it possible for computers to process
+              vast amounts of data and perform complex tasks. This breakthrough
+              paved the way for the development of AI systems that could
+              understand natural language, recognize images, and even beat human
+              champions in games like chess and Go.
+            </p>
+
+            <h3>Applications of AI Across Industries</h3>
+            <p>
+              AI has revolutionized healthcare by improving diagnosis,
+              treatment, and patient care. Machine learning algorithms can
+              analyze medical images, such as X-rays and MRI scans, to detect
+              abnormalities and assist radiologists in making accurate
+              diagnoses. Additionally, AI-driven chatbots and virtual nurses are
+              enhancing patient engagement and monitoring.
+            </p>
+
+            <p>
+              In the financial industry, AI is used for algorithmic trading,
+              fraud detection, credit risk assessment, and customer service.
+              AI-powered robo-advisors provide personalized investment
+              recommendations, while natural language processing enables
+              sentiment analysis of news and social media for trading decisions.
+            </p>
+
+            <p>
+              AI is transforming education through personalized learning
+              platforms that adapt to students' needs and abilities. Intelligent
+              tutoring systems provide instant feedback and tailored exercises,
+              enhancing student performance. Furthermore, AI-driven analytics
+              help educators identify at-risk students and implement timely
+              interventions.
+            </p>
+
+            <p>
+              Automation and robotics have long been associated with
+              manufacturing, but AI is taking these technologies to the next
+              level. AI-driven robots can perform complex tasks with precision,
+              reducing errors and increasing efficiency. Predictive maintenance
+              powered by AI minimizes equipment downtime, saving companies
+              millions.
+            </p>
+
+            <p>
+              The transportation sector is experiencing a seismic shift with
+              AI-driven autonomous vehicles. Companies like Tesla and Waymo are
+              developing self-driving cars that promise safer and more efficient
+              transportation. AI also optimizes traffic management, reducing
+              congestion and emissions.
+            </p>
+
+            <p>
+              AI has made its mark in the entertainment industry through content
+              recommendation systems like Netflix's recommendation algorithm.
+              Additionally, AI-generated art and music are gaining recognition
+              in the creative world, blurring the lines between human and
+              machine creativity.
+            </p>
+
+            <h3>Benefits of AI</h3>
+            <p>AI offers numerous benefits, including:</p>
+            <ul>
+              <li>
+                Efficiency and Productivity: AI automates routine tasks, freeing
+                up human workers to focus on more creative and strategic
+                endeavors. This increases productivity and reduces the risk of
+                human error.
+              </li>
+              <li>
+                Improved Decision-Making: AI systems can analyze vast datasets
+                and provide insights that humans might overlook. This helps
+                businesses make data-driven decisions and stay competitive.
+              </li>
+              <li>
+                Enhanced Healthcare: AI assists medical professionals in
+                diagnosing diseases, predicting outbreaks, and developing
+                personalized treatment plans, ultimately improving patient
+                outcomes.
+              </li>
+              <li>
+                Safety and Security: AI is used in cybersecurity to detect and
+                prevent cyberattacks. It also enhances physical security through
+                facial recognition and surveillance systems.
+              </li>
+            </ul>
+
+            <h3>Challenges and Concerns</h3>
+            <p>
+              Despite its advantages, AI also presents challenges and concerns:
+            </p>
+            <ul>
+              <li>
+                Job Displacement: One of the most significant concerns
+                surrounding AI is the potential for job displacement. As AI
+                systems automate tasks, some traditional jobs may become
+                obsolete, requiring a shift in workforce skills and retraining.
+              </li>
+              <li>
+                Bias and Fairness: AI algorithms can inherit biases present in
+                the data they are trained on, leading to discriminatory
+                outcomes. Ensuring fairness and transparency in AI systems is a
+                critical challenge.
+              </li>
+              <li>
+                Privacy: AI systems often require access to vast amounts of
+                personal data. Protecting individuals' privacy while harnessing
+                the power of AI is an ongoing concern.
+              </li>
+            </ul>
+          </article>
         </div>
       </div>
     </main>
   </body>
+  <script src="./main.js"></script>
 </html>
